--- a/index.html
+++ b/index.html
@@ -1,60 +1,32 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Dadi Gunadi - Frontend Developer</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="./css/style.css" />
 </head>
 <body>
+
+  <!-- HERO -->
   <header class="hero">
     <img src="profile.png" alt="Profile" class="profile-img" />
     <h1>Dadi Gunadi</h1>
     <p class="tagline">Frontend developer who builds fast, accessible web apps with React & Tailwind.</p>
-  </header>  <section id="skills">
-  <h2>Skills</h2>
-  <div class="skills-grid">
-    <div class="skill-box">HTML</div>
-    <div class="skill-box">CSS</div>
-    <div class="skill-box">JavaScript</div>
-    <div class="skill-box">React</div>
-    <div class="skill-box">API Integration</div>
-    <div class="skill-box">Git & GitHub</div>
-  </div>
-</section>
-<section id="projects">
-  <h2>Projects</h2>
-  <div class="projects-grid">
-    
-    <div class="project-card">
-      <h3>Landing Page</h3>
-      <p>Responsive personal webpage built with pure HTML & CSS.</p>
-      <a href="https://dadigunadi.github.io/landing-page-day1/" target="_blank">View Project →</a>
-    </div>
+  </header>
 
-    <div class="project-card">
-      <h3>To-Do App</h3>
-      <p>Task organizer app using JavaScript + LocalStorage.</p>
-      <a href="https://dadigunadi.github.io/todo-app-day2/" target="_blank">View Project →</a>
-    </div>
+  <!-- SKILLS -->
+  <section id="skills">
+    <h2>Skills</h2>
 
-    <div class="project-card">
-      <h3>Weather App</h3>
-      <p>Get real-time weather using OpenWeather API.</p>
-      <a href="https://dadigunadi.github.io/weather-app-day3/" target="_blank">View Project →</a>
+    <div class="skills-grid">
+      <div class="skill-box">HTML</div>
+      <div class="skill-box">CSS</div>
+      <div class="skill-box">JavaScript</div>
+      <div class="skill-box">React</div>
+      <div class="skill-box">API Integration</div>
+      <div class="skill-box">Git & GitHub</div>
     </div>
+  </section>
 
-    <div class="project-card">
-      <h3>Movie Search (React)</h3>
-      <p>Search movies with OMDB API using React.</p>
-      <a href="https://dadigunadi.github.io/movie-app-day4/" target="_blank">View Project →</a>
-    </div>
-
-  </div>
-</section>
-<section class="contact">
-  <h2>Contact</h2>
-  <p>Tangerang Selatan</p>
-  <p>Email: <a href="mailto:gunadi.dadi@gmail.com">gunadi.dadi@gmail.com</a></p>
-</section>
-</body>
-</html>
+  <!-- PROJECTS -->
